Add jackson-annotations as maven dependencies to make jackson-dataformat-properties and jackson-dataformat-yaml compile

--- a/properties/pom.xml
+++ b/properties/pom.xml
@@ -20,6 +20,12 @@ configuration files as if there was implied nesting structure (by default using 
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
     <!-- for now let's consider databind somewhat optional... -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
