--- a/yaml/pom.xml
+++ b/yaml/pom.xml
@@ -19,6 +19,12 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
     <!-- Extends Jackson core, databind (optional); uses SnakeYAML for parsing, generation -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
