--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <dependency> <!-- all components use junit for testing -->
