Use karaf-maven-plugin 4.2.6 to create an apache karaf feature for jackson-dataformat-csv (#144)

--- a/csv/pom.xml
+++ b/csv/pom.xml
@@ -26,6 +26,7 @@ abstractions.
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
+      <scope>provided</scope>
     </dependency>
     <!-- we do not 100% need dep here because it is transitive dependency
         through databind: however, since it is needed anyway let's force
@@ -34,6 +35,7 @@ abstractions.
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <!-- and for testing -->
@@ -64,6 +66,10 @@ abstractions.
       <plugin>
         <groupId>org.moditect</groupId>
         <artifactId>moditect-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.karaf.tooling</groupId>
+        <artifactId>karaf-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
