Use karaf-maven-plugin 4.2.6 to create an apache karaf feature for jackson-dataformat-properties (#144)

--- a/properties/pom.xml
+++ b/properties/pom.xml
@@ -56,6 +56,10 @@ configuration files as if there was implied nesting structure (by default using 
         <groupId>org.moditect</groupId>
         <artifactId>moditect-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.apache.karaf.tooling</groupId>
+        <artifactId>karaf-maven-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 </project>
